--- a/src/tools/style.css
+++ b/src/tools/style.css
@@ -1,3 +1,12 @@
+body {
+  text-align: center;
+  margin: 0;
+  padding: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+}
+
 .board {
   display: block;
   margin-top: 10px;
